Fixing reflections